2014-10-26  Georg-Johann Lay  <avr@gjlay.de>

	Fix PERF_TAG_[P]FMT_FLOAT.  Tidy perf_instruction.

	* avrtest.h (PERF_TAG_FMT_FLOAT, PERF_TAG_PFMT_FLOAT): Fix.
	* testavr.h (AR_SP): Remove and use...
	(pSP): ...this instead.
	* avrtest.c: Same.
	* logging.h (perf_t.cmd): Turn from array to scalar.
	* logginc.c: Adjust.
	(perf_instruction, do_log_config, perf_verbose_start): Tidy.
	(perf_start, perf_stat, perf_dump, perf_stop): Tidy.

2014-10-25  Georg-Johann Lay  <avr@gjlay.de>

	Fix options.o <- testavr.h dependency.

	* Makefile (options.o): Depend on testavr.h.
	* options.c (usage): Fix LEAVE_USAGE.

2014-10-25  Georg-Johann Lay  <avr@gjlay.de>

	Remove last remains of "magic" paradigm.

	* testavr.h (magic_t): Rename to sfr_t.
	(named_port): Rename to named_sfr.
	* avrtest.c (data_read_magic_byte, data_write_magic_byte): Remove.
	Adjust callers to use data_read_byte / data_write_byte instead.

2014-10-25  Georg-Johann Lay  <avr@gjlay.de>

	Switch from TICKS_PORT to SYSCALL.

	* avrtest.h (TICKS_PORT): Remove define.
	(TICKS_IS_CYCLES, TICKS_IS_INSNS, TICKS_IS_PRAND, TICKS_IS_RAND)
	(TICKS_RESET, TICKS_RESET_ALL): Remove.
	(avrtest_syscall_8): Remove.
	(DEF_SYSCALL1_0, DEF_SYSCALL1_1, AT_INLINE): New.
	(avrtest_cycles, avrtest_insns, avrtest_rand, avrtest_prand)
	(avrtest_reset_cycles, avrtest_reset_insns, avrtest_reset_prand)
	(avrtest_reset_all): New.
	* testavr.h (AR_TICKS_PORT, log_get_ticks): Remove.
	* avrtest.c (named_port) [TICKS_PORT]: Remove entries.
	(log_cpu_address) [AR_TICKS_PORT]: Remove.
	(func_SYSCALL) [8]: Don't handle.
	* logging.c (do_ticks_cmd): Rewrite.
	(s_ti, log_get_ticks, do_get_ticks): Remove.
	(do_syscall) [8]: Don't handle.

2014-10-23  Georg-Johann Lay  <avr@gjlay.de>

	Fail on undefined pre-decrement / post-increment Operations.

	* avr-opcode.def (UNDEF): New.
	* load_flash.c (decode_opcode) [X+, Y+, Z+, -X, -Y, -Z]: Map
	instructions with these addressing modes to ID_UNDEF if register
	overlaps it.
	* avrtest.c (func_UNDEF): New.